# stream-yolo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: deploy.yml
assets/: test_30_go_benchmark.csv  test_30_py_benchmark.csv
client/: README.md  pubspec.yaml
client/android/app/src/main/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
go_server/: Dockerfile  main.go
model/: README.md
nginx/: default.conf
py_server/: Dockerfile  client.py  main.py  pyproject.toml
py_server/utils/: extract_frame.py  get_model.py  run_model.py  test.py
results/: go_result.csv  py_result.csv  summary.py
